# task_manager

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: run_tests.yml
app/api/endpoins/: __init__.py  tasks.py  users.py
app/api/schemas/: message.py  task.py  user.py
app/api/services/: task.py  user.py  ws.py
app/core/: config.py  security.py
app/db/: database.py  models.py
migrations/: env.py
migrations/versions/: 30503bdb2396_init.py  e4a703181c9e_add_author_column.py
tests/: conftest.py  docker-compose.yml  test_auth.py  test_endpoints.py  test_websocket.py
